egress-external-https-proxy-integration/service-mesh/http-proxy/gateway-istio-mutual/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: mtls
      protocol: TLS
    hosts:
    - external-app.corp.net
    tls:
      mode: ISTIO_MUTUAL
